--- a/JavaScript/dom/index.html
+++ b/JavaScript/dom/index.html
@@ -22,9 +22,18 @@
       placeat excepturi in porro minima quo laudantium temporibus, aliquid
       repellendus similique.
     </p>
+
+    <ul id="todos">
+      <li class="todo">Java <button>X</button></li>
+      <li class="todo">SpringBoot <button>X</button></li>
+      <li class="todo">JavaScript <button>X</button></li>
+    </ul>
+
     <form action="">
       <input type="text" placeholder="Bear Name" />
       <input type="password" placeholder="password" />
+      <input type="checkbox" name="" />
+      <input type="range" name="" min="100" max="500" step="50" />
       <input type="submit" />
     </form>
     <ul>
