--- a/JavaScript/dom_event/index.html
+++ b/JavaScript/dom_event/index.html
@@ -8,16 +8,11 @@
   </head>
   <body>
     <!-- <button id="click">Click Me!</button> -->
-    <form action="">
+    <!-- <form action="">
       <input type="range" min="10" max="50" />
-    </form>
-
-    <ul>
-      <li class="first">First</li>
-      <li class="second">Second</li>
-      <li class="third">Third</li>
-    </ul>
+    </form> -->
     <!-- <button id="impossible">Try Pressing !</button> -->
+    <div class="boxes"></div>
 
     <script src="app.js"></script>
   </body>
